--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.parallel=true
 # Fabric Properties
 minecraft_version=1.21.1
 yarn_mappings=1.21.1+build.3
-loader_version=0.16.5
+loader_version=0.16.9
 
 # Mod Properties
 mod_version = 2.2.0
@@ -13,18 +13,21 @@ maven_group = com.github.TheRedBrain
 archives_base_name = rpg-inventory
 
 # Dependencies
-fabric_version=0.104.0+1.21.1
-cloth_config_version=15.0.130
+fabric_version=0.110.0+1.21.1
+fzzy_config_version=0.5.9+1.21
 trinkets_version=3.10.0
 slot_customization_api_version=2.1.0
 
 # Compatibilities
-mod_menu_version=11.0.2
 food_overhaul_version=2.1.0
-mana_attributes=2.3.0
-health_regeneration_overhaul_version=2.3.0
-inventory_size_attributes_version=1.0.1
+mana_attributes=2.6.0
+health_regeneration_overhaul_version=2.4.1
+inventory_size_attributes_version=1.1.0
 overhauled_damage_version=2.2.1
-stamina_attributes=2.3.1
+stamina_attributes=2.6.0
+resource_bar_api_version=2.6.2
 backpack_attribute_version=2.1.0
-player_attribute_screen_version=1.0.0
+player_attribute_screen_version=1.1.0
+
+cloth_config_version=15.0.130
+mod_menu_version=11.0.2
